[gd_scene load_steps=4 format=2]

[ext_resource path="res://models/mina.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Mina.gd" type="Script" id=2]

[sub_resource type="SphereShape" id=1]
radius = 8.0

[node name="Mina" type="Spatial"]
script = ExtResource( 2 )

[node name="AreaMina" type="Area" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 3

[node name="CollisionShape" type="CollisionShape" parent="AreaMina"]
shape = SubResource( 1 )

[node name="mina" parent="." instance=ExtResource( 1 )]
[connection signal="body_entered" from="AreaMina" to="." method="_on_AreaMina_body_entered"]
[connection signal="body_exited" from="AreaMina" to="." method="_on_AreaMina_body_exited"]
